[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/game/TravelGame/Drone/Drone.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/TravelMinigame/Drones/drone_3.png" type="Texture" id=2]

[node name="Drone" type="Node2D"]
script = ExtResource( 1 )

[node name="LaserCannons1" type="Node2D" parent="."]
visible = false

[node name="1" type="Position2D" parent="LaserCannons1"]
position = Vector2( -6.00313, -4.01155 )

[node name="2" type="Position2D" parent="LaserCannons1"]
position = Vector2( 5.98927, -4.01155 )

[node name="LaserCannons2" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 2.50004 )

[node name="1" type="Position2D" parent="LaserCannons2"]
position = Vector2( -6.00313, -4.01155 )

[node name="2" type="Position2D" parent="LaserCannons2"]
position = Vector2( 5.98927, -4.01155 )

[node name="LaserCannons3" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="LaserCannons3"]
position = Vector2( -3.98446, -4.01155 )

[node name="2" type="Position2D" parent="LaserCannons3"]
position = Vector2( 3.99788, -4.01155 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.4, 0.4 )

[node name="Timer" type="Timer" parent="."]

[node name="ZoomTween" type="Tween" parent="."]
